# point-animation

./: CMakeLists.txt  build-resources.sh  build.sh  test.cpp
include/: AllAnimations.hpp  Animation.hpp  CMakeLists.txt  Clock.hpp  Clock.inc.hpp  IntAnimation.hpp  Map.hpp  Vec2fAnimation.hpp
src/: Animation.cpp  CMakeLists.txt  Clock.cpp  IntAnimation.cpp  Vec2fAnimation.cpp  main.cpp
